# PTM_dashboard

./: .Rbuildignore  .dockerignore  .gitignore  DESCRIPTION  Dockerfile  README.md  adduts.ipynb  dashboard.py  generate_docs.R  pyproject.toml  test_data_object.R
R/: PTM_definition.R  README.md  data_object.R  helper_functions.R  normalization.R  test.R  visualization.R
diann_dashboard/: app.R  server.R  ui.R
docs/: AnnotatedData_Documentation.md
python/: adduts.ipynb  metadata.py  simple.ipynb  simple.py
rmarkdown/: analysis.Rmd  metadata.Rmd
tests/: testthat.R
tests/testthat/: helper-test-data.R  test_data_object.R  test_statistical_analysis.R
